# monitoring_example

./: .editorconfig  .gitignore  Kconfig  build.sh  meson.build
application/: Kconfig  fsm.c  main.c  meson.build  temperature_monitor.c  temperature_monitor.h  tripper.c  tripper.h
application/models/: fsm_tripper.xml  meson.build
boards/: meson.build
boards/productx/: board.c  flash.ld  meson.build  meson.ini  productx.config  productx.h
boards/productx/cubemx/: .gitignore  .mxproject  meson.build  productx.ioc
boards/productx/cubemx/Core/: meson.build
boards/productx/cubemx/Core/Inc/: main.h  stm32f3xx_hal_conf.h  stm32f3xx_it.h
boards/productx/cubemx/Core/Src/: adc.c  gpio.c  main.c  meson.build  stm32f3xx_hal_msp.c  stm32f3xx_it.c
boards/test/: meson.ini  test.config  test.h
drivers/: Kconfig  meson.build
drivers/adc/: Kconfig  adc_stm32.c  meson.build
drivers/clock/: Kconfig  clock_stm32.c  meson.build
drivers/gpio/: Kconfig  gpio_stm32.c  meson.build
drivers/hal_stm32f3xx/: meson.build
drivers/hal_stm32f3xx/include/: stm32f3xx_hal_rcc_ex.h
drivers/hal_stm32f3xx/src/: grabber.sh  meson.build
drivers/ntc/: meson.build  ntc.c
include/: fsm.h
include/boards/: board.h  board_config.h
include/drivers/: adc.h  clock.h  gpio.h  ntc.h
scripts/: crc_appender.sh  fsm_code.gsl
soc/: meson.build
soc/arm/: meson.build
soc/arm/stm32/: meson.build
soc/arm/stm32/stm32f3xx/: meson.build  stm32f301x8.h  stm32f3xx.h
subprojects/: cmock.wrap  unity.wrap
test/: meson.build  mock_cfg.yml.in  mockgen.sh  test_temperature_monitor.c
