application_files = []
application_generated_files = []

subdir('models')

application_files += files('fsm.c',
                           'main.c',
                           'temperature_monitor.c',
                           'tripper.c')

source_files += application_files
source_files += application_generated_files

